--- a/.storybook/components/EmojiButton/EmojiButton.module.css
+++ b/.storybook/components/EmojiButton/EmojiButton.module.css
@@ -1,4 +1,4 @@
-.storybook-emoji-button {
+.root {
   border: 1px solid gray;
   border-radius: 4px;
   box-shadow: 2px 2px 0 2px gray;
@@ -9,14 +9,14 @@
   width: 3rem;
 }
 
-.storybook-emoji-button:active {
+.root:active {
   box-shadow: 1px 1px 0 1px gray;
   outline: none;
   position: relative;
   top: 0.1rem;
 }
 
-.storybook-emoji-button__emoji {
+.emoji {
   position: relative;
   left: 0.1rem;
 }
