--- a/sandbox/components/examples/Spacing/SpacingSizes.css
+++ b/sandbox/components/examples/Spacing/SpacingSizes.css
@@ -1,8 +1,8 @@
-.storybook-example-spacing:not(:last-child) {
+.sandbox-spacing-sizes:not(:last-child) {
   margin-bottom: 3rem;
 }
 
-.storybook-example-spacing__indicator {
+.sandbox-spacing-sizes__indicator {
   background-color: #f54c1b;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
